fix(auction): preserve watch keyword insertion order
Set.copyOf does not preserve insertion order; use
Collections.unmodifiableSet over the LinkedHashSet to keep the
documented insertion-order contract while remaining immutable.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>